<resources>
    <string name="app_name">TeacherAttendanceApp</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Time Table</string>
    <string name="nav_photos">Blank</string>
    <string name="nav_movies">Give Assignment</string>
    <string name="nav_notifications">My Profile</string>
    <string name="nav_settings">Blank</string>
    <string name="nav_result">RESULT</string>
    <string name="nav_about_us">Blank</string>
    <string name="nav_chat">Chat</string>
    <string name="download"><u>Click Here See Assignment</u></string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Time Table</item>
        <item>Give Assignment</item>
        <item>RESULT</item>
        <item>Chat</item>
        <item>My Profile</item>

    </string-array>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>

    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
