<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
<!--        <item-->
<!--            android:id="@+id/nav_photos"-->
<!--            android:icon="@drawable/ic_group_black_24dp"-->
<!--            android:title="@string/nav_photos" />-->
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/nav_movies" />



        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_email_white_24dp"
            android:title="@string/nav_result" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_notifications" />

    </group>

    <!--<item android:title="Other">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_about_us"-->
                <!--android:title="@string/nav_about_us" />-->
            <!--<item-->
                <!--android:id="@+id/nav_privacy_policy"-->
                <!--android:title="@string/privacy_policy" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>